services/cluster/pocket-id/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: cloudijs-system
spec:
  hostnames:
    - auth.cloudijs.nl
  parentRefs:
    - name: shared-gateway-http
      namespace: cloudijs-system
  rules:
    - backendRefs:
        - name: pocket-id
          port: 1411
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id-redirect-to-https
  namespace: cloudijs-system
spec:
  hostnames:
    - auth.cloudijs.nl
  parentRefs:
    - name: shared-gateway-http
      namespace: cloudijs-system
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
